--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <link type="Image/x-icon" href="./assets/images/favicon.png" rel="icon" />
 
     <script src="./assets/plugins/swiper/swiper.js"></script>
+    <script src="./assets/js/menu.js" defer></script>
     <script src="./assets/js/modal.js" defer></script>
 
-    <title>Промышленность 2026: Промышленность, точки роста и стабильности</title>
+    <title>TRASSIR для госсектора: ваши клиенты останутся довольны </title>
   </head>
 
   <body>
