--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
             </div>
             <div class="text text--start text--full">
               <span class="text-base text-base--normal">Обратная связь</span>
-              <a href="tel:+74952236339">+7 (495) 223-63-39 (Москва)</a>
-              <a href="tel:+78127401120">+7 (812) 740-11-20 (Санкт-Петербург)</a>
+              <a href="mailto:om@xcom.ru">Электронная почта: om@xcom.ru</a>
+
               <div class="group">
                 <a href="#"><img src="./assets/images/tg.svg" alt="" /></a>
                 <a href="#"><img src="./assets/images/vk.svg" alt="" /></a>
