--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <nav class="header__menu">
             <a href="#keytopics" class="header__link">Ключевые темы</a>
             <a href="#speakers" class="header__link">Спикеры</a>
-            <a href="#contacts" class="header__link">Регистрация</a>
+            <a href="#registration" class="header__link">Регистрация</a>
           </nav>
         </div>
 
@@ -115,6 +115,7 @@
         </div>
       </section>
 
+      <a id="speakers"></a>
       <section class="speakers container">
         <div class="speakers__content content">
           <div class="headgroup">
