changed logo tag
Signed-off-by: KadochnikovK <kadochnikov_k@mail.ru>

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <header class="header container">
       <div class="header__content content">
         <div class="header__item">
-          <a href="https://www.xcom.ru/" class="logo">
+          <div class="logo">
             <img class="logo__img" src="./assets/images/logo.svg" alt="XCOM" />
             <img class="logo__img" src="./assets/images/logo-trassir.svg" style="transform: translateY(-10%)" alt="TRASSIR" />
-          </a>
+          </div>
           <nav class="header__menu">
             <a href="#keytopics" class="header__link">Ключевые темы</a>
             <a href="#speakers" class="header__link">Спикеры</a>
